--- a/Css/style.css
+++ b/Css/style.css
@@ -43,10 +43,16 @@ body{
     line-height: 1.6;
 }
 
+section {
+	padding: 5em 2em;
+}
+
 img {
 	display:block;
 	max-width:100%; 
 }
+
+strong{font-weight: var(--fw-bold)}
 
 
 /* Typography */
@@ -54,7 +60,7 @@ img {
 h1,
 h2,
 h3 {
-	line-height:1.1;
+	line-height:1;
 	margin: 0; 
 }
 
@@ -63,14 +69,63 @@ h2 { font-size: var(--fs-h2) }
 h3 { font-size: var(--fs-h3) }
 
 .section__title {
+	margin-bottom: .25em;
+}
 
+.section__title--intro {
+	font-weight: var(--fw-reg);
+}
+
+.section__title--intro strong {
+    display: block;
 }
 
 
 .section__subtitle {
-	
+	margin: 0;
+	font-size: var(--fs-h3);
 }
-p.footer-madeby {
+
+.section__subtitle--intro,
+.section__subtitle--about {
+	background: var(--clr-accent);
+	font-family: var(--ff-secondary);
+	margin-bottom: 1em;
+}
+
+/* Header */
+
+nav {display: none;}
+
+/* Intro Section */
+
+.intro {
+	position: relative;
+}
+
+@media (min-width: 600px) {
+    .intro {
+        display: grid;
+        width: min-content;
+        margin: 0 auto; 
+        grid-column-gap: 1em;
+        grid-template-areas: 
+            "img title"
+            "img subtitle";
+        grid-template-columns: min-content max-content;
+    }
+    
+    .intro__img {
+    	grid-area: img;
+    	min-width: 250px; 
+    }
+
+    .section__subtitle--intro {
+    	align-self: start;
+    }
+}
+
+div.footer-madeby {
 	color: black;
 	opacity: 0.5;
 }
