--- a/Css/style.css
+++ b/Css/style.css
@@ -21,6 +21,9 @@
 	--fs-h2:2.25rem;
 	--fs-h3:1.25rem;
 	--fs-body:1rem;
+
+	--bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
+	      0.125em 0.125em 0.25em rgba(0,0,0,.15);
 }
 
 @media (min-width: 800px) {
@@ -53,6 +56,29 @@ img {
 }
 
 strong{font-weight: var(--fw-bold)}
+
+:focus {
+	outline: 3px solid var(--clr-accent);
+	outline-offset: 3px;
+}
+
+.btn {
+	display: inline-block;
+	padding: .5em 2.5em;
+	background: var(--clr-accent);
+	color: var(--clr-dark);
+	text-decoration: none;
+	cursor: pointer;
+	font-size: .8rem;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-weight: var(--fw-bold);
+	transition: transform 200ms ease-in-out;
+}
+
+.btn:hover {
+	transform: scale(1.1);
+}
 
 
 /* Typography */
@@ -89,6 +115,7 @@ h3 { font-size: var(--fs-h3) }
 .section__subtitle--intro,
 .section__subtitle--about {
 	background: var(--clr-accent);
+	padding: .25em 1em;
 	font-family: var(--ff-secondary);
 	margin-bottom: 1em;
 }
@@ -101,6 +128,10 @@ nav {display: none;}
 
 .intro {
 	position: relative;
+}
+
+.intro__img {
+	box-shadow: var(--bs);
 }
 
 @media (min-width: 600px) {
@@ -118,11 +149,68 @@ nav {display: none;}
     .intro__img {
     	grid-area: img;
     	min-width: 250px; 
+    	position: relative;
+    	z-index: 2;
     }
 
     .section__subtitle--intro {
     	align-self: start;
+    	grid-column: -1/1;
+    	grid-row: 2;
+    	text-align: right;
+    	position: relative;
+    	left: -1.5em;
+    	width: calc(100% + 1.5em);
     }
+}
+
+
+
+/* My services Section (WHAT I DO)*/
+
+.my-services {
+	background-color: var(--clr-dark);
+	background-image: url(../images/services-bg.jpg);
+	background-size: cover; 
+	color: var(--clr-light);
+	text-align: center;
+}
+
+.section__title--services {
+	color: var(--clr-accent);
+	position: relative;
+}
+
+.section__title--services::after {
+    content: '';
+    display: block;
+    width: 2em;
+    height: 1px;
+    margin: 0.5em auto 1em;
+    background: var(--clr-light);
+}
+
+.services {
+	margin-bottom: 4em;
+}
+
+.service {
+	max-width: 500px;
+	margin: 0 auto;
+}
+
+
+@media (min-width: 800px) {
+	.services {
+		display: flex;
+		max-width: 1000px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.service + .service {
+		margin-left: 2em;
+	}
 }
 
 div.footer-madeby {
@@ -131,7 +219,18 @@ div.footer-madeby {
 }
 
 
+/* About me */
 
+.about-me {
+	max-width: 1000px;
+	margin: 0 auto;
+}
 
+@media (min-width: 600px) {
+	.about-me {
+		display: grid;
+		grid-template-columns: 1fr 200px;
+	}
 
-
+	
+}
