--- a/Css/style.css
+++ b/Css/style.css
@@ -232,15 +232,112 @@ nav {display: none;}
 }
 
 .header{
-	text-align: left;
+	text-align: center;
 	color: #333
+	padding:1rem;
+	position: relative;
+}
+
+.header:after {
+	content: '';
+	position: absolute;
+	bottom: -16px;
+	left: 50%;
+	transform: translateX(-50%);
+	height: 4px;
+	width: 130px;
+	padding: 2px;
+	background-color: #16e0bd;
+
+}
+
+.container {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	grid-gap: 1rem;
+	padding: 1rem 80px;
+	font-size: 1rem;
+}
+
+.skill-box {
+	padding: 1rem;
+	color: var(--clr-dark);
+	cursor: pointer; 
+}
+
+.skill-box:hover > .skill-title:after, .skill-box:hover > .skill-title:before {
+	width: 40px;
+}
+
+.skill-box:hover .img{
+	transform: translateY(-10px);
+}
+
+
+p.skill-text{
+	font-family: var(--ff-secondary);
+}
+
+.skill-title h3{
+	color:var(--clr-dark);
+	margin-top: 0.5rem;
 }
 
 .skill-title {
-	margin-top: 1em;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding:0.5rem;
+	margin-bottom: 0.5rem;
+	margin-top: 1em; 
+	position: relative;
+}
+
+.skill-title:after{
+	content: '';
+	position: absolute;
+	bottom: 0;
+	right: 50%;
+	width: 0;
+	height:4px;
+	background-color: var(--clr-light);
+	transition: .5s;
 }
 
 
+.skill-title:before{
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	width: 0;
+	height:4px;
+	background-color: var(--clr-accent);
+	transition: .5s;  
+}
+
+.img{
+	transition: .5s;
+}
+.skill-icon {
+	width: 50px;
+}
+
+@media screen and (max-width: 900px) {
+	.container {
+		grid-template-columns: repeat(2,1fr);
+		padding: 2rem 50px;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.container {
+		grid-template-columns: 1fr;
+	}
+}
 
 /* About me */
 
