--- a/Css/style.css
+++ b/Css/style.css
@@ -1,8 +1,4 @@
-* {
-	/*padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-*/}
+*,
 *::before,
 *::after {
     box-sizing: border-box;
@@ -112,7 +108,7 @@ h3 { font-size: var(--fs-h3) }
 
 
 .section__subtitle {
-	margin: 0;
+	margin-left: 0;
 	font-size: var(--fs-h3);
 }
 
@@ -159,7 +155,7 @@ nav {display: none;}
 
     .section__subtitle--intro {
     	align-self: start;
-    	grid-column: -1/1;
+    	grid-column: -1/2;
     	grid-row: 2;
     	text-align: right;
     	position: relative;
@@ -346,13 +342,87 @@ p.skill-text{
 	margin: 0 auto;
 }
 
+.about-me__img {
+	box-shadow: var(--bs);
+} 
+
 @media (min-width: 600px) {
 	.about-me {
 		display: grid;
 		grid-template-columns: 1fr 200px;
+		grid-template-areas: 
+			"title img"
+			"subtitle img"
+            "text img";
+        grid-column-gap: 2em;
 	}
 
-	
+	.section__title--about{
+        grid-area: title; 
+    }
+
+     .section__subtitle--about {
+        grid-column: 1 / -1;
+        grid-row: 2;
+        position: relative;
+        left: -1em;
+        width: calc(100% + 2em);
+        padding-left: 1em;
+        padding-right: calc(200px + 4em); 
+    }
+
+	.about-me__img {
+		grid-area: img;
+		position: relative;
+		z-index: 2;
+	}
+}
+
+
+
+/* Recent Companies*/
+.work4 h3,
+.work5 h3,
+.work6 h3 {
+	color: var(--clr-accent);
+	text-align: right;
+}
+
+.section__title--work {
+	color: var(--clr-dark);
+	position: relative;
+}
+
+.section__title--work::after {
+    content: '';
+    display: block;
+    width: 4em;
+    height: 2px;
+    margin: 0.5em  0.5em;
+    background: var(--clr-dark);
+}
+
+.services {
+	margin-bottom: 4em;
+}
+
+.service {
+	max-width: 500px;
+	margin: 0 auto;
+}
+
+
+@media (min-width: 800px) {
+	.services {
+		display: flex;
+		max-width: 1000px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.service + .service {
+		margin-left: 2em;
+	}
 }
 
 
